[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Graphics/Menu/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://Resources/Fonts/menuBig.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/OptionsScreen.gd" type="Script" id=3]
[ext_resource path="res://Resources/Fonts/menu.tres" type="DynamicFont" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=7]

[node name="OptionsScreen" type="TextureRect"]
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 7 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 176.0
margin_top = 20.0
margin_right = 1744.0
margin_bottom = 1060.0
custom_constants/separation = 29
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1568.0
margin_bottom = 117.0
mouse_filter = 1

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
margin_right = 1568.0
margin_bottom = 117.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="SettingsContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 1568.0
margin_bottom = 811.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 400
custom_constants/margin_left = 400
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="VBoxContainer" parent="VBoxContainer/SettingsContainer"]
margin_left = 400.0
margin_right = 1168.0
margin_bottom = 665.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/SettingsContainer/GridContainer"]
margin_right = 768.0
margin_bottom = 59.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Music Volume:"
valign = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/GridContainer"]
margin_top = 63.0
margin_right = 768.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
value = 100.0

[node name="Soundeffects" type="Label" parent="VBoxContainer/SettingsContainer/GridContainer"]
margin_top = 167.0
margin_right = 768.0
margin_bottom = 226.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Sound Effect Volume:"
valign = 1

[node name="SoundeffectsSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/GridContainer"]
margin_top = 230.0
margin_right = 768.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
value = 100.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="VBoxContainer/SettingsContainer/GridContainer"]
margin_top = 334.0
margin_right = 768.0
margin_bottom = 393.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Resolution:"
valign = 1

[node name="ResolutionButton" type="OptionButton" parent="VBoxContainer/SettingsContainer/GridContainer"]
margin_top = 397.0
margin_right = 768.0
margin_bottom = 497.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
text = "1200x600"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer/SettingsContainer/GridContainer"]
margin_top = 501.0
margin_right = 768.0
margin_bottom = 560.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen:"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer/SettingsContainer/GridContainer"]
margin_top = 564.0
margin_right = 768.0
margin_bottom = 665.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 840.0
margin_right = 1568.0
margin_bottom = 1040.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 1
custom_constants/margin_top = 83
custom_constants/margin_bottom = 0

[node name="BackButton" type="Button" parent="VBoxContainer/BackContainer"]
margin_top = 83.0
margin_right = 1568.0
margin_bottom = 200.0
text = "Go Back"

[connection signal="value_changed" from="VBoxContainer/SettingsContainer/GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SettingsContainer/GridContainer/SoundeffectsSlider" to="." method="_on_SoundeffectsSlider_value_changed"]
[connection signal="item_selected" from="VBoxContainer/SettingsContainer/GridContainer/ResolutionButton" to="." method="_on_ResolutionButton_item_selected"]
[connection signal="toggled" from="VBoxContainer/SettingsContainer/GridContainer/FullscreenToggle" to="." method="_on_FullscreenToggle_toggled"]
[connection signal="pressed" from="VBoxContainer/BackContainer/BackButton" to="." method="_on_BackButton_pressed"]
